<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rice Timer</string>
    <string name="rice_timer_button">Set Rice Timer</string>
    <string name="action_settings">Settings</string>
    <string name="boil_key">boil_minutes</string>
    <string name="cook_key">cook_minutes</string>
    <string name="rest_key">rest_minutes</string>
    <string name="boil_rice_timer_name">Boil Rice</string>
    <string name="cook_rice_timer_name">Cook Rice</string>
    <string name="rest_rice_timer_name">Rest Rice</string>
    <string name="boil_rice_settings_name">Time in Minutes to Boil Rice</string>
    <string name="cook_rice_settings_name">Time in Minutes to Cook Rice</string>
    <string name="rest_rice_settings_name">Time in Minutes to Rest Rice</string>
    <string name="boil_summary">Time it takes for rice to come to a rolling boil.</string>
    <string name="cook_summary">Additional cooking time, after reducing heat to a simmer.</string>
    <string name="rest_summary">The resting period after cooking.</string>
    <string name="long_grain_instructions">Perfect long-grain rice: \n0: Do not rinse rice. \n1: Put rice on high. \n2: Reduce to low and stir.  \n3: Remove from heat and place cloth under lid. \n4: Eat</string>

</resources>
